--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,52 @@
 /*  your css code here. If applicable */
+body {
+    background-color: #f5f5f5;
+}
+header {
+    background-color: #011e29;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+.container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+.latest-news-section {
+    background-color: white;
+    border-radius: 30px;
+    height: 200px;
+    margin-right: 20px;
+    padding: 40px;
+}
+.item2 {
+    background-color: white;
+    border-radius: 30px;
+    height: 300px;
+    margin-right: 20px;
+    padding: 20px;
+}
+.pictorial-news-section {
+    background-color: white;
+    border-radius: 30px;
+    height: 550px;
+}
+.small-img {
+    width: 200px;
+    height: 130px;
+    margin-bottom: 20px;
+    margin-left: 50px;
+}
+h2 {
+    text-align: center;
+}
+p {
+    text-align: center;
+}
+
+ul {
+    text-align: center;
+}
+h3 {
+    text-align: center;
+}
